# HealthAI

./: .gitignore  AUTO_METADATA_README.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/: add_folder_to_rag.py  chat.py  chat_rag.py  llm_client.py  metadata_extractor.py  rag_evaluator.py  rag_system.py  report_generator.py  smart_add_to_rag.py  test_generator2.py  web_chat.py
src/templates/: chatbox.html
testing/: demo_auto_metadata.py  demo_contextual_embeddings.py  demo_reranking.py  example_folder_rag.py  run_evaluation.py
testing/test_datasets/: evaluation_dataset.json
