[project]
name = "healthai"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) system for querying podcast transcripts using Claude/OpenAI with automatic metadata extraction"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "kli30", email = "kv123ai@gmail.com" }
]
keywords = ["rag", "llm", "chatbot", "transcripts", "embeddings", "chromadb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.75.0",
    "chromadb>=1.3.7",
    "flask>=3.1.2",
    "ipykernel>=7.1.0",
    "openai>=2.13.0",
    "sentence-transformers>=5.2.0",
]

[project.urls]
Homepage = "https://github.com/kli30/healthai"
Repository = "https://github.com/kli30/healthai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
